data read in database working and adding buttons to main screen